--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Avanish Mishra"
-  avatar           : "profile.png"
+  avatar           : "avanish.jpeg"
   bio              : "Staff Scientist @ Los Alamos National Lab"
   location         : "Los Alamos, NM, USA"
   employer         : "Los Alamos National Laboratory"
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
-  email            : ""
+  email            : #""
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  LinkedIn         : "https://www.linkedin.com/in/dravanish/"
   orcid            : "https://orcid.org/my-orcid?orcid=0000-0003-3997-0445"
   pinterest        :
   soundcloud       :
