--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Avanish Mishra"
   avatar           : "avanish.jpeg"
-  bio              : "Staff Scientist @ Los Alamos National Lab"
+  bio              : "Staff Scientist @ Los Alamos National Laboratory"
   location         : "Los Alamos, NM, USA"
   employer         : #"Los Alamos National Laboratory"
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
