--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Publications"
-    URL: "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
+    url: "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
 
   #- title: "Talks"
     #url: /talks/    
