--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     #url: /talks/    
 
   - title: "Research"
-    url: /teaching/    
+    url: /research/    
     
   - title: "About Me"
     url: /portfolio/
