--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,6 @@
 # main links links
 main:
-  - title: "Publications"
-    #url: <a href="https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en" target="_blank">
-    url: "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
+
 
   #- title: "Talks"
     #url: /talks/    
@@ -10,9 +8,13 @@ main:
   - title: "Research"
     url: /research/    
     
-  - title: "About Me"
-    url: /portfolio/
-        
+  # - title: "About Me"
+  #   url: /portfolio/
+
+  - title: "Publications"
+    #url: <a href="https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en" target="_blank">
+    url: "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
+    
   #- title: "Blog Posts"
     #url: /year-archive/
     
