--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
 
   - title: "Publications"
     #url: <a href="https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en" target="_blank">
-    url: "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
+    url: "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en{:target="_blank"}"
     
   #- title: "Blog Posts"
     #url: /year-archive/
