--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Avanish Mishra"
 title_separator          : "-"
 name                     : &name "Avanish"
 description              : &description "personal description"
-url                      : https://dravanish.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mavanish.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "dravanish/dravanish.github.io"
+repository               : "mavanish/mavanish.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "dravanish"
+  github           : "mavanish"
   google_plus      :
   keybase          :
   instagram        :
