--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  orcid            : "https://orcid.org/my-orcid?orcid=0000-0003-3997-0445"
+  orcid            : "https://orcid.org/0000-0003-3997-0445"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
