--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=_P6zuNAAAAAJ&hl=en"
   email            : #""
-  LinkedIn         : "https://www.linkedin.com/in/dravanish/"
+  LinkedIn         : "dravanish"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
